# minimp3-cmake

./: CMakeLists.txt
src/: lib_druid_minimp3.hpp
src/minimp3/: includes.hpp  minimp3.cpp  minimp3.h
